2:
  Rename to "eris httpd" to acknowledge fork
  Add regression test suite
  Replace compile-time options with command-line ones
  Fix segfault with directory listing of /
  Replace buffer_1 and buffer_2 with stdio
  Replace libowfat with libc
  Add all patches from (defunct) Debian package
  Fix if-modified-since date parsing
  Make text content-types use charset=UTF-8
  Change default content-type to application/octet-stream
  Makefile no longer overrides CC and CPP from parent makes
  Don't send Content-type if there's no content
  New maintainer: Neale Pickett <neale@woozle.org>

1.10:
  have fallback in case sendfile fails

1.9:
  chdir to cgi's base dir (Kuba Winnicki)
  set HTTP_ACCEPT_ENCODING environment variable (Kuba Winnicki)
    We actually should export all HTTP headers as HTTP_[header]
    Any takers?
  Try not to send error message HTTP headers if we already sent the
    headers from the CGI (Kuba Winnicki)
  <ims -> <=ims (Gerrit Pape)
  64-bit file I/O cleanliness
  fix HTTP ranges (Joachim Berdal Haga via Gerrit Pape)

1.8:
  keep current environment in CGI (Laurent Bercot)
  make fnord-conf use the UID and not the user name (Fridtjof Busse)
  fix typo in buffer_putulonglong (Gerrit Pape)
  fix CGI POST off-by-two typo (Mark Hopf)
  fix gif->png conversion (Thomas Seck)
  remove == bashism from fnord-conf (Thomas Seck)
  add bittorrent mime type
  make authorization data available to CGIs for GET, too (Paul Jarc)
  fix conversion of host name to lower case (Gerrit Pape)
  add small test cgi: cgi-post.c
  fix CGI POST bug (Moe Wibble)
  fix CGI PATH_TRANSLATED bug (Nicolas George)
  add optional authentication support (Nicolas George, see README.auth)
  make sure error messages are text/html
  move /. -> /: conversion before demangling so it can actually be
    used as security measure for installations that don't use chroot

1.7:
  add .mov and .qt for quicktime, .mpg for video/mpeg and .wav for audio/x-wav